--- a/exercise1/pages/003.html
+++ b/exercise1/pages/003.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>This week focusses on attitude, but more importantly your attitude. </p>
-        <p>In business, your attitude is key and can be the difference between success and failure. Your expertise may be amazing, but unless you have the can do attitude you may find you don’t enjoy the level of success that you could achieve.
-        </p>
+        <p><em>“I have been fortunate to observe and be a consultant to many business leaders from supervisors to owners to CEOs over the last 25 years.  This has provided the magnifying glasses through which I have been able to identify what I believe are the eight activities that successful leaders do to create business success.”</em></p>
+        <p style="text-align: right"><strong> – Coach Mark</strong></p>
+       
     </div>
 </content-box>
