--- a/exercise1/pages/004.html
+++ b/exercise1/pages/004.html
@@ -1,54 +1,7 @@
-<content-box row-reverse="true">
-<div class="col-xs-12 col-sm-6" style="padding:20px 0">
-	<div class="v3-journal" aria-live="polite">
-		<div id="para1">
-			<p><strong>Astute</strong></p>
-			<p>Mark talks about what makes an astute person  in business and the qualities they possess. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para2">
-			<p><strong>Trust</strong></p>
-			<p>Mark talks about what it means to have trust in business and the qualities a trust worthy person practices. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para3">
-			<p><strong>Thinking</strong></p>
-			<p>Mark talks about the thinking person in  business and the qualities a thinker practices. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para4">
-			<p><strong>Inspired</strong></p>
-			<p>Mark talks about what it means to be inspired in business and the qualities the inspired person possess. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para5">
-			<p><strong>Tenacious</strong></p>
-			<p>Mark talks about what being tenacious in business means and the qualities of such a person. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para6">
-			<p><strong>Universal</strong></p>
-			<p>Mark talks about what makes the universal person  in business and the qualities they possess. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para7">
-			<p><strong>Dynamic</strong></p>
-			<p>Mark talks about what makes the dynamic person  in business and the qualities they possess. He then provides you with some question to reflect on.</p>
-		</div>
-		<div id="para8">
-			<p><strong>Energised</strong></p>
-			<p>Mark talks about what makes an energised person  in business and the qualities they possess. He then provides you with some question to reflect on.</p>
-		</div>
-		<button aria-label="next page" id="nextPara" style="float:right; margin-top:10px;" class="v3-arrow-button">
-			<span aria-hidden="true" class="fa fa-chevron-right"></span>
-		</button>
+<activity-box>
+	<page-title-center :title="pageTitle"></page-title-center>
+	<p>Before we introduce you to Coach Mark’s eight activities, why not have a go and come up with your own eight activities for success. It will be interesting to see if there is alignment with your thinking and that of Coach Mark.
+</p>
+    <textbox id="page004a"></textbox>
+</activity-box>
 
-	</div>
-		
-</div>
-<div class="col-xs-12 col-sm-6 v3-text-col">
-	<page-title :title=pageTitle></page-title>
-
-	<p>Every week we are focusing on key strategies to help you unlock your inner champion. </p>
-
-	<p>Click the button to see the sections.</p>
-	</div>
-
-</content-box>
-<style>
-
-</style>
