--- a/exercise1/pages/007.html
+++ b/exercise1/pages/007.html
@@ -1,3 +1,6 @@
-<break-title :course-id=course.id :exercise_id=exercise_id></break-title>
-
+<activity-box>
+	<page-title-center :title="pageTitle"></page-title-center>
+	<p>Take a moment to reflect on week three. Write a short paragraph with two critical learnings from week three. Mark shared his learnings, explain what resonated with you and why?</p>
+    <textbox id="page007a"></textbox>
+</activity-box>
 
