--- a/exercise1/pages/002.html
+++ b/exercise1/pages/002.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-xs-12 col-sm-6 v3-text-col">
 		<page-title :title=pageTitle></page-title>
-		<p>Welcome to week three of The Sport of Business, a five-week online course or as we will call it your Training Program, which is focussed on unlocking your 'Inner Champion', helping you to build your business using the principles of high-performance sport. </p>
+		<p>Welcome to week four of The Sport of Business, a five-week online course or as we will call it your Training Program, which is focussed on unlocking your 'Inner Champion', helping you to build your business using the principles of high-performance sport. </p>
 	</div>
 </content-box>
 
