--- a/exercise1/pages/005.html
+++ b/exercise1/pages/005.html
@@ -1,5 +1,54 @@
-<activity-box type="Results">
-    <page-title-center :title="pageTitle"></page-title-center>
-    <p>Below is your business performance ratings from week one. It is essential to keep these front of mind so that when you continue through the course, you are thinking about them. </p>
-<p>Coach Mark wants you to improve in the areas that need some work, so take some time now to review them, reflect and then continue with week three.</p>
-</activity-box>
+<content-box row-reverse="true">
+<div class="col-xs-12 col-sm-6" style="padding:20px 0">
+	<div class="v3-journal" aria-live="polite">
+		<div id="para1">
+			<p><strong>Switch On</strong></p>
+			<p>Switching on means putting things front of mind.</p>
+		</div>
+		<div id="para2">
+			<p><strong>Value Yourself Up</strong></p>
+			<p>You know more than you think you know. </p>
+		</div>
+		<div id="para3">
+			<p><strong>Stick to the Basics</strong></p>
+			<p>In your business there will be core activities that drive your business success.</p>
+		</div>
+		<div id="para4">
+			<p><strong>Know your Numbers</strong></p>
+			<p>It’s what you don’t know that can bring you down, so stay on top of your numbers all the time.</p>
+		</div>
+		<div id="para5">
+			<p><strong>Personal Development</strong></p>
+			<p>Grow yourself and you grow your business.</p>
+		</div>
+		<div id="para6">
+			<p><strong>Stay on Task</strong></p>
+			<p>Every day ask yourself the question, “If I do this, will it grow my business?”</p>
+		</div>
+		<div id="para7">
+			<p><strong>Health and Fitness</strong></p>
+			<p>High performers don’t have a choice when it comes to health and fitness.</p>
+		</div>
+		<div id="para8">
+			<p><strong>Expect to Succeed</strong></p>
+			<p>Great business people are never surprised by success: they plan for it and expect it.</p>
+		</div>
+		<button aria-label="next page" id="nextPara" style="float:right; margin-top:10px;" class="v3-arrow-button">
+			<span aria-hidden="true" class="fa fa-chevron-right"></span>
+		</button>
+
+	</div>
+		
+</div>
+<div class="col-xs-12 col-sm-6 v3-text-col">
+	<page-title :title=pageTitle></page-title>
+
+	<p>Every week we are focusing on key strategies to help you unlock your inner champion. </p>
+
+	<p>Click the button to see the sections.</p>
+	</div>
+
+</content-box>
+<style>
+
+</style>
