--- a/exercise2/pages/002.html
+++ b/exercise2/pages/002.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p><em>“For many years I have studied close up the attitude of successful people.  I have been fortunate to be surrounded by highly-motivated, successful people for much of my adult life. When it came to identifying the traits of these individuals I took many pages of notes on my observations. </em></p>
-        <p><em>I observed athletes and business people alike who were at the top of their game. What I lacked was a simple way of capturing these traits. Out of the blue one day, I decided to use the letters of the word Attitude to simplify my notes.”</em>
+        <p>The first of Coach Mark's Great Eight is about switching on. It’s about knowing your people, your business, your market and your industry better than anyone else. </p>
+        <p>Switching on means putting things front of mind. It means becoming a student of the game. The things you need to know about, and what you need to know about them, are always right in front of your face – you just don’t see them until you switch on.
         </p>
     </div>
 </content-box>
