--- a/exercise2/pages/004.html
+++ b/exercise2/pages/004.html
@@ -4,9 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>Let’s now take a look at these eight traits that Coach Mark has identified. </p>
-        <p>For each trait, this section will take you through the following. You will be introduced to the character trait, followed by Marks explanation. Next, you will then be given “things to consider”, these are the qualities or skillsets that this kind of person possesses. You are to rate yourself against each. Then you will be given tasks to answer.</p>
-        <p>Remember to have the right attitude!
+        <p>Switching on takes practice. It requires you to keep a journal with you at all times so you can make notes about your observations. Once a month, also write notes about each of your direct reports and staff so you create an ongoing commentary for yourself that you can revisit to see the changes that are taking place.
+
         </p>
     </div>
 </content-box>
