--- a/exercise2/pages/011.html
+++ b/exercise2/pages/011.html
@@ -4,7 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>Read the newspaper about the economy, your market and your industry. Read your industry magazines and websites.  Learn everything you can so you are switched on to how to do business better than before. Write important things down in your journal.
+        <p>Great, now you have a plan for staying switched on. The key is to follow through.</p>
+        <p>As you complete the weekly tasks, use your journal to summarise your learnings.
         </p>
         <!-- If you need to display the tutorial, set tutorial to true -->
         <journal-button align="center" :tutorial="false"></journal-button>
