--- a/exercise3/pages/004.html
+++ b/exercise3/pages/004.html
@@ -1,3 +1,9 @@
-<activity-box type="Task">
-	<minimal-form :questions-wrap=questionsWrap></minimal-form>
-</activity-box>
+<content-box two-column="true">
+    <template slot="left">
+        <image-block :alt="alt" :image=image :root=root></image-block>
+    </template>
+    <template slot="right">
+        <page-title :title="pageTitle"></page-title>
+        <p>In my experience of coaching many business leaders, they often think they are a fraud – “How did I get here?” “Do I know my stuff?”  YES, you do, so value yourself up and get on with it. You worked hard and applied yourself; you deserve to value yourself up.</p>
+    </template>
+</content-box>
