--- a/exercise3/pages/005.html
+++ b/exercise3/pages/005.html
@@ -1,4 +1,11 @@
-
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
-
-
+<content-box two-column="true">
+    <template slot="left">
+        <image-block :alt="alt" :image=image :root=root></image-block>
+    </template>
+    <template slot="right">
+        <page-title :title="pageTitle"></page-title>
+        <p>Write down a list of everything you know about your business, your industry and your ability to function within that industry. You should come up with at least a minimum of 300 things.</p>
+        <p>Over the last 25 years, the highest number achieved by one of my clients was 7,500 things that he knew. This individual ended up becoming a global authority in his industry travelling all over the world.
+        </p>
+    </template>
+</content-box>
