--- a/exercise3/pages/002.html
+++ b/exercise3/pages/002.html
@@ -1,13 +1,12 @@
-<content-box>
-    <div class="col-xs-12 col-sm-6 v3-image-col">
-        <image-block :alt="alt" :image=image :root=root></image-block>
-    </div>
-    <div class="col-xs-12 col-sm-6 v3-text-col">
-        <page-title :title="pageTitle"></page-title>
-        <p>The astute person proactively looks for opportunity and is open to recognising opportunity. They gather information from a variety of sources and use what they need. </p>
-        <p>The astute person identifies relationships that will be mutually beneficial and nurtures those relationships to the benefit of all. They understand that leadership is a privilege and they must be tuned to their people. </p>
-        <br>
-        <!-- If you need to display the tutorial, set tutorial to true -->
-        <journal-button align="right" :tutorial="false"></journal-button>
-    </div>
-</content-box>
+
+<activity-box type="Activity" two-column="true">
+    <template slot="left">
+         <page-title :centered="false" :title="pageTitle"></page-title>
+      <p>The second of Coach Mark's Great Eight is about valuing yourself up. You know more than you think you do. You need to value your knowledge, your management skills and your business experience.</p>
+        <textbox id="pg002" label="Do you value your current knowledge? Explain." placeholder=""></textbox>
+       
+    </template>
+    <template slot="right">
+<image-block :alt="alt" :image=image :root=root></image-block>
+    </template>
+</activity-box>
