--- a/exercise4/pages/004.html
+++ b/exercise4/pages/004.html
@@ -1,3 +1,12 @@
-<activity-box type="Task">
-	<minimal-form :questions-wrap=questionsWrap></minimal-form>
-</activity-box>
+<content-box two-column="true">
+    <template slot="left">
+        <image-block :alt="alt" :image=image :root=root></image-block>
+    </template>
+    <template slot="right">
+        <page-title :title="pageTitle"></page-title>
+        <p>The worst – and I mean the worst – statement I ever hear is when people say, “We have to get back to the basics.”</p>
+        <p>I despair when I hear a national sports coach say they need to get back to the basics. My question to them is, “Why did you ever leave the basics?” </p>
+        <p>The basics work, so stick to them. Now and then they need a tweak; very rarely do they need a significant overhaul.
+        </p>
+    </template>
+</content-box>
