--- a/exercise5/pages/005.html
+++ b/exercise5/pages/005.html
@@ -1,4 +1,8 @@
+<activity-box type="Activity">
+    <page-title :centered="false" :title="pageTitle"></page-title>
+    <p>Now it is time for you to find out if you really know your numbers.</p>
 
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
-
-
+<p>Talk to your accountant, your banker or your financial advisor and make sure your numbers are up-to-date and that everything can be tracked on a daily basis.
+</p>
+    <textbox id="pg002" label="Explain your plan for having your numbers available to you frequently and accurately. If you already feel confident you do, then explain your plan to improve in this area." placeholder=""></textbox>
+</activity-box>
