--- a/exercise10/pages/002.html
+++ b/exercise10/pages/002.html
@@ -4,9 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>Well done, you have completed week three of the Sport of Business and are well on your way to unlocking your 'Inner Champion', helping you to build your business using the principles of high-performance sport. </p>
-        <p>As mentioned previously, your attitude is everything. </p>
-        <p>You control your own destiny so embrace a positive proactive attitude in all facets of your life and enjoy the happiness and success that this brings to you.
+        <p>Well done, you have completed week Four of the Sport of Business and are well on your way to unlocking your 'Inner Champion', helping you to build your business using the principles of high-performance sport. The Great Eight are just that, great!</p>
+        <p>Follow through with all the Exercises and BELIEVE IN YOURSELF!
         </p>
     </div>
 </content-box>
