--- a/exercise10/pages/004.html
+++ b/exercise10/pages/004.html
@@ -1,8 +1,9 @@
 <content-box>
     <page-title-center :title="pageTitle"></page-title-center>
-    <p>Once you have completed all tasks, you are ready to start week four.</p>
-    <p>Week four focuses on Coach Mark's Great Eight, each of the eight topics are what Mark has identified as the mindset and thinking that you need to apply to yourself, to develop as a successful leader in business.</p>
-
-<p>Each of these activities, when implemented separately from the others, will make an impact. But when all are performed together in continuity, the effect is astronomic</p>
-    
+    <p>Once you have completed all tasks, you are ready to start week Five, the final week of the Sport of Business program.</p>
+    <p>In this week five, we will explore Coach Marks Six C’s for Business Performance. </p>
+    <p>Mark has also identified through his many years of working in both high-performance sport and business his Six Elements to Creating a Successful Mindset. These will also be covered, and compliment Coach Marks Six C’s.</p>
+    <p>Lastly, Coach Mark will share his expertise on creating and maintaining a success log.</p>
+    <p>We look forward to working through this content with you, see you soon.
+    </p>
 </content-box>
