--- a/exercise10/pages/005.html
+++ b/exercise10/pages/005.html
@@ -1,3 +1,10 @@
-<week-title :course-id=course.id :exercise_id=exercise_id :rating=rating :hover=hover :comment=comment> </week-title>
+<content-box>
+   <page-title-center :title="pageTitle"></page-title-center>
+    <p>Okay, you have made significant progress, remember to ensure you have completed all assignments, tasks and activities. Here a checklist for you to mark off all tasks before kicking into week five.</p>
+    <ticks :learnt=learnt></ticks>
+
+</content-box>
 
 
+
+    
