--- a/exercise7/pages/004.html
+++ b/exercise7/pages/004.html
@@ -1,3 +1,7 @@
-<activity-box type="Task">
-	<minimal-form :questions-wrap=questionsWrap></minimal-form>
+<activity-box type="Activity">
+    <page-title :centered="true" :title="pageTitle"></page-title>
+    <p>There are two primary activities in your business:</p>
+    <p>One – Return on investment – the things that will grow your people, your turnover, profits and your business as a whole
+    </p>
+    <textbox id="pg004" label="Provide an example of what you currently do to grow your business." placeholder=""></textbox>
 </activity-box>
