--- a/exercise7/pages/005.html
+++ b/exercise7/pages/005.html
@@ -1,4 +1,7 @@
+<activity-box type="Activity">
+		<page-title :centered="true" :title="pageTitle"></page-title>
+    <p>There are two primary activities in your business:</p>
 
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
-
-
+<p>Two – Distractions – the things that do the opposite to One.</p>
+    <textbox id="pg005" label="Provide an example of a distraction to your business." placeholder=""></textbox>
+</activity-box>
