--- a/exercise8/pages/005.html
+++ b/exercise8/pages/005.html
@@ -1,4 +1,12 @@
-
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
-
-
+<content-box two-column="true">
+    <template slot="left">
+        <image-block :alt="alt" :image=image :root=root></image-block>
+    </template>
+    <template slot="right">
+        <page-title :title="pageTitle"></page-title>
+        <p>Coach Mark wants to help you in your quest to better health and wellbeing and has provided you with access to valuable resources he has pulled together from his many years of experience. </p>
+        <p>One is a guide to walking, and how to approach this exercise, so you see it as manageable and enjoyable. The second is a guide to 12 ways to improve sleep. </p>
+        <p>These are both excellent resources that will compliment your preparation for the Wellbeing Plan you have in this module.
+        </p>
+    </template>
+</content-box>
