end module banner changed

--- a/exercise1/pages/006.html
+++ b/exercise1/pages/006.html
@@ -1,8 +1,8 @@
 <activity-box type="Results">
     <page-title-center :title="pageTitle"></page-title-center>
     <p>Below is your business performance ratings from week one. It is essential to keep these front of mind so that when you continue through the course, you are thinking about them. </p>
-	<p>Coach Mark wants you to improve in the areas that need some work, so take some time now to review them, reflect and then continue with week three.</p>
-	 <table class="table">
+	<p class="mbb">Coach Mark wants you to improve in the areas that need some work, so take some time now to review them, reflect and then continue with week Four.</p>
+    <table class="table">
         <thead>
             <tr>
                 <th scope="col"><strong>Question</strong></th>
