--- a/exercise1/pages/009.html
+++ b/exercise1/pages/009.html
@@ -1,3 +1,3 @@
-<break-title :course-id=course.id :exercise_id=exercise_id></break-title>
+<module-break-title :course-id=course.id :exercise_id=exercise_id></module-break-title>
 
 
