--- a/exercise2/pages/012.html
+++ b/exercise2/pages/012.html
@@ -1,3 +1,3 @@
-<break-title :course-id=course.id :exercise_id=exercise_id></break-title>
+<module-break-title :course-id=course.id :exercise_id=exercise_id></module-break-title>
 
 
