--- a/exercise6/pages/013.html
+++ b/exercise6/pages/013.html
@@ -4,9 +4,8 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>Fantastic, you have an approach to drilling back to the basics. Use this approach for any other system or process which becomes complicated in the future.</p>
-        <p>As you complete the weekly tasks, use your journal to summarise your learnings.
-        </p>
+        <p>Impressive, you now have a plan to keep growing as a leader in your business. But don’t stop, once you have momentum, keep going and growing.</p>
+        <p>As you complete the weekly tasks, use your journal to summarise your learnings.</p>
         <!-- If you need to display the tutorial, set tutorial to true -->
         <journal-button align="center" :tutorial="false"></journal-button>
     </div>
