--- a/exercise8/pages/017.html
+++ b/exercise8/pages/017.html
@@ -1,4 +1,4 @@
 
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
+    <module-break-title :course-id=course.id :exercise_id=exercise_id></module-break-title>
 
 
