--- a/exercise9/pages/004.html
+++ b/exercise9/pages/004.html
@@ -1,4 +1,4 @@
 
-    <break-title :course-id=course.id :exercise_id=exercise_id></break-title>
+    <module-break-title :course-id=course.id :exercise_id=exercise_id></module-break-title>
 
 
