fix(x8p5): made pdf open in newtab rather than download on click, also linting

--- a/exercise8/pages/005.html
+++ b/exercise8/pages/005.html
@@ -4,9 +4,17 @@
     </template>
     <template slot="right">
         <page-title :title="pageTitle"></page-title>
-        <p>Coach Mark wants to help you in your quest to better health and wellbeing and has provided you with access to valuable resources he has pulled together from his many years of experience.</p>
-        <p>One is <a :href="root+'/images/pdf/walk.pdf'" download>a guide to walking</a>, and how to approach this exercise, so you see it as manageable and enjoyable.</p>
-        <p>The second is a guide to <a :href="root+'/images/pdf/sleep.pdf'" download>12 ways to improve sleep</a>.</p>
-        <p>These are both excellent resources that will compliment your preparation for the Wellbeing Plan you have in this module.</p>
+        <p>
+            Coach Mark wants to help you in your quest to better health and wellbeing and has provided you with access to valuable resources he has pulled together from his many years of experience.
+        </p>
+        <p>
+            One is <a :href="root+'/images/pdf/walk.pdf'" target="_blank">a guide to walking</a>, and how to approach this exercise, so you see it as manageable and enjoyable.
+        </p>
+        <p>
+            The second is a guide to <a :href="root+'/images/pdf/sleep.pdf'" target="_blank">12 ways to improve sleep</a>.
+        </p>
+        <p>
+            These are both excellent resources that will compliment your preparation for the Wellbeing Plan you have in this module.
+        </p>
     </template>
 </content-box>
