fix(x1p5): change text

--- a/exercise1/pages/005.html
+++ b/exercise1/pages/005.html
@@ -3,7 +3,7 @@
 	<div class="v3-journal" aria-live="polite">
 		<div id="para1">
 			<p><strong>Switch On</strong></p>
-			<p>Switching on means putting things front of mind.</p>
+			<p>Switching on means putting things in front of mind.</p>
 		</div>
 		<div id="para2">
 			<p><strong>Value Yourself Up</strong></p>
