fix(x1p5): change text

--- a/exercise1/pages/005.html
+++ b/exercise1/pages/005.html
@@ -19,7 +19,7 @@
 		</div>
 		<div id="para5">
 			<p><strong>Personal Development</strong></p>
-			<p>Grow yourself and you grow your business.</p>
+			<p>Grow yourself, and you grow your business.</p>
 		</div>
 		<div id="para6">
 			<p><strong>Stay on Task</strong></p>
