fix(x2p2): linting and update text

--- a/exercise2/pages/002.html
+++ b/exercise2/pages/002.html
@@ -4,8 +4,11 @@
     </div>
     <div class="col-xs-12 col-sm-6 v3-text-col">
         <page-title :title=pageTitle></page-title>
-        <p>The first of Coach Mark's Great Eight is about switching on. It’s about knowing your people, your business, your market and your industry better than anyone else. </p>
-        <p>Switching on means putting things front of mind. It means becoming a student of the game. The things you need to know about, and what you need to know about them, are always right in front of your face – you just don’t see them until you switch on.
+        <p>
+            The first of Coach Mark's Great Eight is about switching on. It’s about knowing your people, your business, your market and your industry better than anyone else.
+        </p>
+        <p>
+            Switching on means putting things in front of mind. It means becoming a student of the game. The things you need to know about, and what you need to know about them, are always right in front of your face – you don’t see them until you switch on.
         </p>
     </div>
 </content-box>
